Fixed problem with vertical aligning of text in portfolio.

--- a/style.css
+++ b/style.css
@@ -220,14 +220,18 @@ div.block-image-title p {
 
 /* Text block */
 div.block-text {
-  padding: 10%;
+  padding: 0;
+  position: relative;
 }
 
 div.block-text p {
   text-align: center;
-  position: relative;
+  position: absolute;
+  left: 10%;
+  width: 80%;
   top: 50%;
-  transform: translateY(-50%);
+  max-height: 80%;
+  transform: translate(0, -50%);
   font-size: 1.5em;
 }
 
